2008-02-28 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_sky/event_client.pl: Moved to estar6 and updated
	
	* startup/google: Updated for estar6

	* www/ogle/*: Moved to estar6 and updated
	
	* www/sdss/*: Moved to estar6 and updated
	
	* eSTAR/Broker/Handler.pm: Hack to fixed bad VOEvent document submission

	* bin/ogle_parsemail.pl: Run from .procmailrc when an EWS mail comes in
	  now changed to point at estar6
	  
2008-02-27 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/robonet-1.0/*: Modified for move form estar3 to estar5
	
	* etc/user_agent.csh & startup/exo_planets: Modified for move to estar5
	
2008-02-26 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/gsm_gateway.pl: A HTTP frontend for the GSM hardware.
        
        * eSTAR/UA/Handler.pm & bin/make_observation.pl: Added priority support
          to the system, e.g.
          
          bin/make_observation.pl -exposure 30 -passband R -user X -pass Y -project Z -target "Test Target" -ra "08 13 42.00" -dec "-05 04 27.00" -starttime "2008-02-26T20:00:00+0000" -endtime "2008-02-27T04:00:00+0000" -priority 1

	* www/voevent/*: Added Bob Denny

	* etc/gsm_gateway: Startup script for GSM Gateway (must be run as root)
	
2007-12-17 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_mobile_maps/*: Hacking Google Maps for Sky into the
	  Google Mobile Maps (Maps.app) on the Apple iPod touch.
	  
2007-12-16 Alasdair Allan <aa@astro.ex.ac.uk>

	* demo/google_maps/*: Plastic-enabling Google Maps for Sky.
	
2007-11-08 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Fixes for iUI and the iPod touch
        
2007-10-10 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/pq_event.pl: Event client for Palomar-Quest events

2007-09-25 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/eSTAR Status.wdgt/*: Removed link to FTN web camera.
	
2007-09-24 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/istar/*: Basic network status for iPhone using iUI

2007-09-14 Alasdair Allan <aa@astro.ex.ac.uk>
