@@ -40,7 +40,7 @@ vent);' onmouseout='exitflip(event);'></div>
 </div>  <!-- class="front" -->
 
 <div id="back">
-     <p class="backTitle" id="backTitle">OGLE Timeline Widget v1.3.2</p>
+     <p class="backTitle" id="backTitle">OGLE Timeline Widget v1.3.3</p>
     
     <p class="backCopyright" id="backCopyright">
     <em>Dashboard widget code; copyright &copy; 2006, Alasdair Allan<br>Timeline code; copyright &copy; 2006 <a href="javascript:void(0);" onclick="clicked('http://simile.mit.edu/');">SIMILE Project</a>, MIT<br>
